// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DraftOrderTable/> should render 1`] = `
<table
  class="table table table-hover"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        In stock
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="container"
      >
        <div
          class="imgContainer"
        >
          <img
            alt="Alt"
            class="img"
          />
        </div>
        <div
          class="legend"
        >
          <div>
            <a
              class="title"
              href="https://storegorgias3.myshopify.com/admin/products/1/variants/31128766316567"
              rel="noopener noreferrer"
              target="_blank"
            >
              Acidulous candy
            </a>
          </div>
          <div
            class="subtitle"
          >
            Red / A
          </div>
          <div
            class="subtitle"
          >
            SKU: 
            0987654321-1
          </div>
        </div>
      </td>
      <td
        class="numberCol"
      >
        <span
          class="text-muted"
        >
          N/A
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <div
            class="d-inline-block text-center"
          >
            <div>
              <button
                class="p-0 button focusable btn btn-link"
                id="applied-discount-1_31128766316567"
                tabindex="0"
                type="button"
              >
                <strong>
                  <span>
                    $1.00
                  </span>
                </strong>
              </button>
            </div>
          </div>
          <span
            class="times"
          >
            x
          </span>
        </div>
      </td>
      <td
        class="quantityCol"
      >
        <span
          class="numberInput wrapper group horizontal"
        >
          <input
            class="input"
            max="Infinity"
            min="1"
            step="1"
            type="number"
            value="1"
          />
          <span
            class="controls group vertical"
          >
            <button
              aria-disabled="false"
              class="wrapper button wrapper small fill secondary small top"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_up
              </i>
            </button>
            <button
              aria-disabled="true"
              class="wrapper button wrapper small fill secondary small bottom isDisabled"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_down
              </i>
            </button>
          </span>
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <strong
            class="mt-auto mb-auto mr-auto"
          >
            <span>
              $1.00
            </span>
          </strong>
          <button
            aria-disabled="false"
            class="wrapper wrapper ghost ghost destructive medium"
            tabindex="0"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              close
            </i>
          </button>
        </div>
      </td>
    </tr>
    <tr>
      <td
        class="container"
      >
        <div
          class="imgContainer"
        >
          <img
            alt="Alt"
            class="img"
          />
        </div>
        <div
          class="legend"
        >
          <div>
            <a
              class="title"
              href="https://storegorgias3.myshopify.com/admin/products/2/variants/31128766349335"
              rel="noopener noreferrer"
              target="_blank"
            >
              Acidulous candy
            </a>
          </div>
          <div
            class="subtitle"
          >
            Red / B
          </div>
          <div
            class="subtitle"
          >
            SKU: 
            0987654321-2
          </div>
        </div>
      </td>
      <td
        class="numberCol"
      >
        <span
          class="text-muted"
        >
          N/A
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <div
            class="d-inline-block text-center"
          >
            <div>
              <button
                class="p-0 button focusable btn btn-link"
                id="applied-discount-2_31128766349335"
                tabindex="0"
                type="button"
              >
                <strong>
                  <span>
                    $1.00
                  </span>
                </strong>
              </button>
            </div>
          </div>
          <span
            class="times"
          >
            x
          </span>
        </div>
      </td>
      <td
        class="quantityCol"
      >
        <span
          class="numberInput wrapper group horizontal"
        >
          <input
            class="input"
            max="Infinity"
            min="1"
            step="1"
            type="number"
            value="4"
          />
          <span
            class="controls group vertical"
          >
            <button
              aria-disabled="false"
              class="wrapper button wrapper small fill secondary small top"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_up
              </i>
            </button>
            <button
              aria-disabled="false"
              class="wrapper button wrapper small fill secondary small bottom"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_down
              </i>
            </button>
          </span>
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <strong
            class="mt-auto mb-auto mr-auto"
          >
            <span>
              $4.00
            </span>
          </strong>
          <button
            aria-disabled="false"
            class="wrapper wrapper ghost ghost destructive medium"
            tabindex="0"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              close
            </i>
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<DraftOrderTable/> should render without line items 1`] = `
<table
  class="table table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        In stock
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="text-center text-muted"
        colspan="4"
      >
        <small>
          No items
        </small>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<DraftOrderTable/> should render without products 1`] = `
<table
  class="table table table-hover"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        In stock
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="container"
      >
        <div
          class="imgContainer"
        >
          <img
            alt=""
            class="img"
            src="test-file-stub"
          />
        </div>
        <div
          class="legend"
        >
          <div>
            <a
              class="title"
              href="https://storegorgias3.myshopify.com/admin/products/1/variants/31128766316567"
              rel="noopener noreferrer"
              target="_blank"
            >
              Acidulous candy
            </a>
          </div>
          <div
            class="subtitle"
          >
            Red / A
          </div>
          <div
            class="subtitle"
          >
            SKU: 
            0987654321-1
          </div>
        </div>
      </td>
      <td
        class="numberCol"
      >
        <span
          class="text-muted"
        >
          N/A
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <div
            class="d-inline-block text-center"
          >
            <div>
              <button
                class="p-0 button focusable btn btn-link"
                id="applied-discount-1_31128766316567"
                tabindex="0"
                type="button"
              >
                <strong>
                  <span>
                    $1.00
                  </span>
                </strong>
              </button>
            </div>
          </div>
          <span
            class="times"
          >
            x
          </span>
        </div>
      </td>
      <td
        class="quantityCol"
      >
        <span
          class="numberInput wrapper group horizontal"
        >
          <input
            class="input"
            max="Infinity"
            min="1"
            step="1"
            type="number"
            value="1"
          />
          <span
            class="controls group vertical"
          >
            <button
              aria-disabled="false"
              class="wrapper button wrapper small fill secondary small top"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_up
              </i>
            </button>
            <button
              aria-disabled="true"
              class="wrapper button wrapper small fill secondary small bottom isDisabled"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_down
              </i>
            </button>
          </span>
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <strong
            class="mt-auto mb-auto mr-auto"
          >
            <span>
              $1.00
            </span>
          </strong>
          <button
            aria-disabled="false"
            class="wrapper wrapper ghost ghost destructive medium"
            tabindex="0"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              close
            </i>
          </button>
        </div>
      </td>
    </tr>
    <tr>
      <td
        class="container"
      >
        <div
          class="imgContainer"
        >
          <img
            alt=""
            class="img"
            src="test-file-stub"
          />
        </div>
        <div
          class="legend"
        >
          <div>
            <a
              class="title"
              href="https://storegorgias3.myshopify.com/admin/products/2/variants/31128766349335"
              rel="noopener noreferrer"
              target="_blank"
            >
              Acidulous candy
            </a>
          </div>
          <div
            class="subtitle"
          >
            Red / B
          </div>
          <div
            class="subtitle"
          >
            SKU: 
            0987654321-2
          </div>
        </div>
      </td>
      <td
        class="numberCol"
      >
        <span
          class="text-muted"
        >
          N/A
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <div
            class="d-inline-block text-center"
          >
            <div>
              <button
                class="p-0 button focusable btn btn-link"
                id="applied-discount-2_31128766349335"
                tabindex="0"
                type="button"
              >
                <strong>
                  <span>
                    $1.00
                  </span>
                </strong>
              </button>
            </div>
          </div>
          <span
            class="times"
          >
            x
          </span>
        </div>
      </td>
      <td
        class="quantityCol"
      >
        <span
          class="numberInput wrapper group horizontal"
        >
          <input
            class="input"
            max="Infinity"
            min="1"
            step="1"
            type="number"
            value="4"
          />
          <span
            class="controls group vertical"
          >
            <button
              aria-disabled="false"
              class="wrapper button wrapper small fill secondary small top"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_up
              </i>
            </button>
            <button
              aria-disabled="false"
              class="wrapper button wrapper small fill secondary small bottom"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_down
              </i>
            </button>
          </span>
        </span>
      </td>
      <td
        class="numberCol"
      >
        <div
          class="d-flex"
        >
          <strong
            class="mt-auto mb-auto mr-auto"
          >
            <span>
              $4.00
            </span>
          </strong>
          <button
            aria-disabled="false"
            class="wrapper wrapper ghost ghost destructive medium"
            tabindex="0"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              close
            </i>
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
